--- a/ThinkWhat/Controllers/App/Survey/Existing/Cells/Slide.xib
+++ b/ThinkWhat/Controllers/App/Survey/Existing/Cells/Slide.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="160" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ba-FQ-uKV" customClass="CircularIndicatorImageView" customModule="ThinkWhat" customModuleProvider="target">
+                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ba-FQ-uKV" customClass="CircularIndicatorImageView" customModule="ThinkWhat" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="160" height="90"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
