--- a/ThinkWhat/UI/Storyboards/Controllers.storyboard
+++ b/ThinkWhat/UI/Storyboards/Controllers.storyboard
@@ -273,8 +273,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJN-eD-bmR" customClass="PanZoomImageView" customModule="ThinkWhat" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </scrollView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IE5-ys-6ks">
+                                <rect key="frame" x="16" y="310.5" width="343" height="340.5"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Подпишите изображение" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ivG-7J-Ab7">
                                 <rect key="frame" x="16" y="621" width="343" height="30"/>
                                 <nil key="textColor"/>
@@ -288,17 +301,22 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="ivG-7J-Ab7" secondAttribute="trailing" id="7xT-26-wbr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IE5-ys-6ks" secondAttribute="trailing" id="COc-kQ-aOL"/>
                             <constraint firstAttribute="trailing" secondItem="JJN-eD-bmR" secondAttribute="trailing" id="CvB-pk-JNq"/>
+                            <constraint firstItem="IE5-ys-6ks" firstAttribute="leading" secondItem="AC0-tn-YSq" secondAttribute="leadingMargin" id="Oaf-RT-KsY"/>
                             <constraint firstItem="5OH-AT-97K" firstAttribute="top" secondItem="JJN-eD-bmR" secondAttribute="bottom" id="Ogq-OZ-0Yc"/>
                             <constraint firstItem="5OH-AT-97K" firstAttribute="top" secondItem="ivG-7J-Ab7" secondAttribute="bottom" constant="16" id="TSN-hl-6g0"/>
-                            <constraint firstItem="JJN-eD-bmR" firstAttribute="top" secondItem="2tH-he-SQh" secondAttribute="bottom" id="UcZ-Tn-DIw"/>
+                            <constraint firstItem="JJN-eD-bmR" firstAttribute="top" secondItem="AC0-tn-YSq" secondAttribute="top" id="UcZ-Tn-DIw"/>
                             <constraint firstItem="ivG-7J-Ab7" firstAttribute="leading" secondItem="AC0-tn-YSq" secondAttribute="leadingMargin" id="W25-Pb-P6z"/>
+                            <constraint firstItem="5OH-AT-97K" firstAttribute="top" secondItem="IE5-ys-6ks" secondAttribute="bottom" constant="16" id="cOD-Ju-Pzt"/>
                             <constraint firstItem="JJN-eD-bmR" firstAttribute="leading" secondItem="AC0-tn-YSq" secondAttribute="leading" id="cRY-Sn-szj"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="scrollView" destination="JJN-eD-bmR" id="64A-6I-evl"/>
+                        <outlet property="textViewBottomConstraint" destination="cOD-Ju-Pzt" id="fiA-Nw-BG7"/>
                         <outlet property="titleTextField" destination="ivG-7J-Ab7" id="PnF-JC-WXK"/>
+                        <outlet property="titleTextView" destination="IE5-ys-6ks" id="p5H-ee-ljx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ea2-2r-tVM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -635,7 +653,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Подпись" textAlignment="center" minimumFontSize="4" translatesAutoresizingMaskIntoConstraints="NO" id="lKe-MO-dXO" customClass="UnderlinedTextField" customModule="ThinkWhat" customModuleProvider="target">
-                                                    <rect key="frame" x="82.5" y="26" width="458.5" height="28"/>
+                                                    <rect key="frame" x="82.5" y="26" width="233.5" height="28"/>
                                                     <color key="tintColor" red="0.75294117650000003" green="0.24313725489999999" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="28" id="RhR-V8-SiW"/>
@@ -658,7 +676,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Sa-Nm-Yvp" customClass="TrashIcon" customModule="ThinkWhat" customModuleProvider="target">
-                                                    <rect key="frame" x="549" y="22.5" width="35" height="35"/>
+                                                    <rect key="frame" x="324" y="22.5" width="35" height="35"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="8Sa-Nm-Yvp" secondAttribute="height" multiplier="1:1" id="SIz-aR-aF6"/>
