--- a/ThinkWhat/UI/Storyboards/Survey.storyboard
+++ b/ThinkWhat/UI/Storyboards/Survey.storyboard
@@ -329,7 +329,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ge8-eg-E6p">
-                                                    <rect key="frame" x="20" y="12" width="296" height="76"/>
+                                                    <rect key="frame" x="8" y="8" width="320" height="84"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -337,10 +337,10 @@
                                                 </textView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ge8-eg-E6p" firstAttribute="top" secondItem="qC8-G5-e8e" secondAttribute="top" constant="12" id="V3f-5a-olU"/>
-                                                <constraint firstItem="ge8-eg-E6p" firstAttribute="leading" secondItem="qC8-G5-e8e" secondAttribute="leading" constant="20" id="bWJ-al-OzY"/>
-                                                <constraint firstAttribute="trailing" secondItem="ge8-eg-E6p" secondAttribute="trailing" constant="20" id="hpz-da-rm0"/>
-                                                <constraint firstAttribute="bottom" secondItem="ge8-eg-E6p" secondAttribute="bottom" constant="12" id="tuu-Ya-UDT"/>
+                                                <constraint firstItem="ge8-eg-E6p" firstAttribute="top" secondItem="qC8-G5-e8e" secondAttribute="top" constant="8" id="V3f-5a-olU"/>
+                                                <constraint firstItem="ge8-eg-E6p" firstAttribute="leading" secondItem="qC8-G5-e8e" secondAttribute="leading" constant="8" id="bWJ-al-OzY"/>
+                                                <constraint firstAttribute="trailing" secondItem="ge8-eg-E6p" secondAttribute="trailing" constant="8" id="hpz-da-rm0"/>
+                                                <constraint firstAttribute="bottom" secondItem="ge8-eg-E6p" secondAttribute="bottom" constant="8" id="tuu-Ya-UDT"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -408,14 +408,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQg-kB-Ze6">
-                                                    <rect key="frame" x="16" y="11" width="304" height="233.33333333333334"/>
+                                                    <rect key="frame" x="8" y="8" width="320" height="216.66666666666666"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfX-sV-fn2" customClass="ResultIndicator" customModule="ThinkWhat" customModuleProvider="target">
-                                                    <rect key="frame" x="14" y="90" width="308" height="40"/>
+                                                    <rect key="frame" x="8" y="100" width="320" height="40"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="yFI-uy-05t"/>
@@ -424,13 +424,13 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="ZQg-kB-Ze6" firstAttribute="top" secondItem="JG2-1l-7Bj" secondAttribute="top" constant="11" id="Dbd-Y8-uuG"/>
-                                                <constraint firstItem="ZQg-kB-Ze6" firstAttribute="leading" secondItem="JG2-1l-7Bj" secondAttribute="leading" constant="16" id="LR7-to-tau"/>
+                                                <constraint firstItem="ZQg-kB-Ze6" firstAttribute="top" secondItem="JG2-1l-7Bj" secondAttribute="top" constant="8" id="Dbd-Y8-uuG"/>
+                                                <constraint firstItem="ZQg-kB-Ze6" firstAttribute="leading" secondItem="JG2-1l-7Bj" secondAttribute="leading" constant="8" id="LR7-to-tau"/>
                                                 <constraint firstItem="zfX-sV-fn2" firstAttribute="top" secondItem="ZQg-kB-Ze6" secondAttribute="bottom" priority="250" id="SVT-fy-w0e"/>
-                                                <constraint firstAttribute="trailing" secondItem="ZQg-kB-Ze6" secondAttribute="trailing" constant="16" id="W5w-7T-4l7"/>
-                                                <constraint firstItem="zfX-sV-fn2" firstAttribute="leading" secondItem="JG2-1l-7Bj" secondAttribute="leading" constant="14" id="ps7-N8-7b4"/>
-                                                <constraint firstAttribute="trailing" secondItem="zfX-sV-fn2" secondAttribute="trailing" constant="14" id="qsF-1j-DXy"/>
-                                                <constraint firstAttribute="bottom" secondItem="zfX-sV-fn2" secondAttribute="bottom" constant="20" id="rLZ-qs-2f8"/>
+                                                <constraint firstAttribute="trailing" secondItem="ZQg-kB-Ze6" secondAttribute="trailing" constant="8" id="W5w-7T-4l7"/>
+                                                <constraint firstItem="zfX-sV-fn2" firstAttribute="leading" secondItem="JG2-1l-7Bj" secondAttribute="leading" constant="8" id="ps7-N8-7b4"/>
+                                                <constraint firstAttribute="trailing" secondItem="zfX-sV-fn2" secondAttribute="trailing" constant="8" id="qsF-1j-DXy"/>
+                                                <constraint firstAttribute="bottom" secondItem="zfX-sV-fn2" secondAttribute="bottom" constant="10" id="rLZ-qs-2f8"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -522,12 +522,12 @@
                         <segue destination="5Gf-Fw-Oxc" kind="show" identifier="USER" id="rS1-22-8O8"/>
                         <segue destination="RNa-JP-I4X" kind="show" identifier="CLAIM" id="ntw-Xm-8sT"/>
                         <segue destination="CbT-nD-bAq" kind="show" identifier="IMAGE" id="GZP-ZX-3rN"/>
-                        <segue destination="O7l-vA-Y3q" kind="show" identifier="USERS_LIST" id="Inh-GI-AUR"/>
+                        <segue destination="YCi-om-VNu" kind="show" identifier="USERS_LIST" id="EEn-oz-yJu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BOf-kt-dVO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-489.13043478260875" y="-4210.597826086957"/>
+            <point key="canvasLocation" x="-517" y="-4211"/>
         </scene>
         <!--Выберите тип-->
         <scene sceneID="Sg7-5S-PXB">
@@ -3047,6 +3047,55 @@
             </objects>
             <point key="canvasLocation" x="1035" y="-4210"/>
         </scene>
+        <!--Voters View Controller-->
+        <scene sceneID="5V2-Oo-Ovg">
+            <objects>
+                <viewController id="YCi-om-VNu" customClass="VotersViewController" customModule="ThinkWhat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gXi-bm-IIt"/>
+                        <viewControllerLayoutGuide type="bottom" id="p9p-Dx-B0I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="M7z-Bp-R8g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Qw8-wn-9ya">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RnA-2u-acS">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ff9-Q4-hZx">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Qw8-wn-9ya" firstAttribute="top" secondItem="gXi-bm-IIt" secondAttribute="bottom" id="1Qf-g1-jnq"/>
+                            <constraint firstItem="p9p-Dx-B0I" firstAttribute="top" secondItem="Qw8-wn-9ya" secondAttribute="bottom" id="map-Iv-twJ"/>
+                            <constraint firstItem="Qw8-wn-9ya" firstAttribute="leading" secondItem="M7z-Bp-R8g" secondAttribute="leading" id="q15-ev-5Kc"/>
+                            <constraint firstAttribute="trailing" secondItem="Qw8-wn-9ya" secondAttribute="trailing" id="qbS-qN-ycY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Qw8-wn-9ya" id="irM-tH-gZ9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eDq-Nc-X2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1632" y="-4546"/>
+        </scene>
         <!--Users Collection View Controller-->
         <scene sceneID="Hfq-Tw-O6u">
             <objects>
@@ -3079,7 +3128,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lKR-7G-oZE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1951" y="-4211"/>
+            <point key="canvasLocation" x="1632" y="-3883"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
